--- a/04-processes.qmd
+++ b/04-processes.qmd
@@ -20,13 +20,7 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 
 In this section you will learn how to work with processes and jobs in bash.
 
-<br>
-
 ## Exploring processes
-
-------------------------------------------------------------------------
-
-<br>
 
 ::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key points</h2>
@@ -48,7 +42,7 @@ There are a few different ways to explore the processes running on your computer
 We can learn a lot about processes by looking at the output of these commands. For example, if we run the command `ps -fly` we get something like this:
 
 ```{bash eval=F}
-[USERNAME]@bifx-core2:~/course$ ps -fly
+[USERNAME]@aabn:~/course$ ps -fly
 S UID         PID   PPID   C  PRI  NI   RSS   SZ    WCHAN  STIME TTY          TIME CMD
 S [USERNAME]  35269 35244  0  80   0    39296 13648 wait   Nov10 pts/5    00:00:04 -bash
 R [USERNAME]  44935 35269  0  80   0    3328  8822  -      10:11 pts/5    00:00:00 ps -fly
@@ -63,8 +57,6 @@ By looking at the output columns, we can see the following:
     -   The parent of a process is the process that started it. In our case, the `ps -fly` process was started by the `bash` process
     -   You can see this by observing that the *PPID* of the `ps -fly` process is the same as the *PID* of the `bash` process
 
-<br>
-
 ::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
 
@@ -72,11 +64,11 @@ Use `htop` to find the following:
 
 <ul>
 
-<li>How many cores does bifx-core2 have?</li>
+<li>How many cores does the server have?</li>
 
 <li>How much memory does it have?</li>
 
-<li>What is the parent process of the `htop` process?</li>
+<li>What is the process ID of the `htop` process?</li>
 
 </ul>
 
@@ -87,19 +79,13 @@ Use `htop` to find the following:
 ::: solution
 <h2><i class="far fa-eye"></i> Solution:</h2>
 
-Run `htop -u [USERNAME]` to start `htop` and display only your own processes. At the top of the `htop` screen there is a bar chart style representation of each of the cores on the server, showing how busy each core is. bifx-core2 has 64 cores. There is also a bar entitled *Mem*, with the total memory shown to its right. bifx-core2 has 504G. To find the parent process of `htop` press <kbd>F5</kbd> to see a tree view. Then press <kbd>F3</kbd> and search for `htop`. The parent process is `bash`, visible above the `htop` process.
+Run `htop -u [USERNAME]` to start `htop` and display only your own processes. At the top of the `htop` screen there is a bar chart style representation of each of the cores on the server, showing how busy each core is. The server has 64 cores. There is also a bar entitled *Mem*, with the total memory shown to its right. The server has 250G of memory. The process ID of `htop` is in the first column.
 :::
 
 </details>
 :::
 
-<br>
-
 ## Job control
-
-------------------------------------------------------------------------
-
-<br>
 
 ::: key-points
 <h2><i class="fas fa-thumbtack"></i> Key points</h2>
@@ -113,8 +99,6 @@ Run `htop -u [USERNAME]` to start `htop` and display only your own processes. At
     -   When a job is run in the background you are shown another command prompt immediately.
 :::
 
-<br>
-
 ### Controlling processes and jobs
 
 ------------------------------------------------------------------------
@@ -122,12 +106,10 @@ Run `htop -u [USERNAME]` to start `htop` and display only your own processes. At
 In UNIX based systems, jobs and processes can be paused or stopped completely by sending them 'signals'. There are many signals that you can send (type `kill -l` to list them all). Arguably the most important are the following:
 
 -   SIGINT, SIGHUP, and SIGTERM, which request that the process should terminate gracefully
-    -   Not all programs respond to these signals. For instance, `vim` ignores the SIGINT signal
+    -   Not all programs respond to these signals.
 -   SIGKILL, which terminates the process immediately
     -   This should only be used as a last resort, as processes that are sent this signal will not be able close gracefully
 -   SIGTSTP, which suspends the process, and SIGCONT, which restarts a suspended process
-
-<br>
 
 #### Sending signals to jobs or processes
 
@@ -143,8 +125,6 @@ There are also some useful keyboard shortcuts to send signals to jobs
 -   <kbd>Ctrl+c</kbd> sends the SIGINT signal to the current foreground job
 -   <kbd>Ctrl+z</kbd> sends the SIGTSTP signal to the current foreground job
 
-<br>
-
 #### Restarting jobs
 
 Once a job has been stopped, it can be restarted in a number of ways:
@@ -152,8 +132,6 @@ Once a job has been stopped, it can be restarted in a number of ways:
 -   `fg [job ID]` restarts a job in the foreground
 -   `bg [job ID]` restarts a job in the background
 -   Send the SIGCONT signal to the job using `kill -CONT [job or process ID]` or `htop`
-
-<br>
 
 #### Disowning jobs
 
@@ -167,27 +145,25 @@ By default, jobs you start in your shell are 'owned' by your current shell sessi
 The following example shows how to move a foreground job to the background and disown it:
 
 ```{bash eval=F}
-[USERNAME]@bifx-core2:~/course$ sleep 10000
+[USERNAME]@aabn:~/course$ sleep 10000
 <Ctrl+z>
 ^Z
 [1]+  Stopped                 sleep 10000
-[USERNAME]@bifx-core2:~/course$ bg %1
+[USERNAME]@aabn:~/course$ bg %1
 [1]+ sleep 10000 &
-[USERNAME]@bifx-core2:~/course$ jobs
+[USERNAME]@aabn:~/course$ jobs
 [1]+  Running                 sleep 10000 &
-[USERNAME]@bifx-core2:~/course$ disown %1
-[USERNAME]@bifx-core2:~/course$ jobs
-[USERNAME]@bifx-core2:~/course$ ps
+[USERNAME]@aabn:~/course$ disown %1
+[USERNAME]@aabn:~/course$ jobs
+[USERNAME]@aabn:~/course$ ps
   PID TTY          TIME CMD
 29621 pts/1    00:00:00 sleep
 37480 pts/1    00:00:00 bash
 40951 pts/1    00:00:00 ps
-[USERNAME]@bifx-core2:~/course$ 
+[USERNAME]@aabn:~/course$ 
 ```
 
 The example shows that when the `sleep 10000` job is disowned it is removed from the `jobs` list, but the process keeps running.
-
-<br>
 
 ::: challenge
 <h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
@@ -226,5 +202,3 @@ You could use `htop` or `ps` to find the process IDs of the stopped processes, a
 
 </details>
 :::
-
-<br>
